@@ -158,6 +158,8 @@ int vips_scale( VipsImage *in, VipsImage **out, ... )
 	__attribute__((sentinel));
 int vips_msb( VipsImage *in, VipsImage **out, ... )
 	__attribute__((sentinel));
+int vips_byteswap( VipsImage *in, VipsImage **out, ... )
+	__attribute__((sentinel));
 
 int vips_bandjoin( VipsImage **in, VipsImage **out, int n, ... )
 	__attribute__((sentinel));
